# flix-dl

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/api/: client.rs  download.rs  error.rs  mod.rs  movie.rs  show.rs
