[package]
name = "flix-dl"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.70"

[dependencies.tokio]
version = "1.27.0"
features = ["macros", "rt-multi-thread", "fs"]

[dependencies.clap]
version = "4.2.2"
features = ["derive", "env"]

[dependencies.futures-util]
version = "0.3.28"

[dependencies.async-trait]
version = "0.1.68"

[dependencies.reqwest]
version = "0.11.16"
features = ["cookies", "stream"]

[dependencies.select]
version = "0.6.0"

[dependencies.indicatif]
version = "0.17.3"